package com.shellshellfish.aaas.common.grpc.zzapi;

import com.google.gson.annotations.SerializedName;

/**
 * Created by chenwei on 2018- 五月 - 11
 */

public class ApplyResult {

  @SerializedName("accepttime")
  String accepTtime;
  @SerializedName("applydate")
  String applyDate;
  @SerializedName("applyserial")
  String applySerial;
  @SerializedName("applyshare")
  String applyShare;
  @SerializedName("applysum")
  String applySum;
  @SerializedName("applytime")
  String applyTime;
  @SerializedName("bankacco")
  String bankAcco;
  @SerializedName("bankname")
  String bankName;
  @SerializedName("bankSerial")
  String bankSerial;
  @SerializedName("businflagStr")
  String businFlagStr;
  @SerializedName("callingcode")
  String callingCode;
  @SerializedName("capitalmode")
  String capitalMode;
  @SerializedName("commisiondiscount")
  String commisionDiscount;
  @SerializedName("confirmflag")
  String confirmFlag;
  @SerializedName("confirmstat")
  String confirmstat;
  @SerializedName("freezemethod")
  String freezeMethod;
  @SerializedName("fundacco")
  String fundAcco;
  @SerializedName("fundname")
  String fundName;
  @SerializedName("kkstat")
  String kkStat;
  @SerializedName("melonmethod")
  String melonMethod;
  @SerializedName("occurbankacco")
  String occurBankAcco;
  @SerializedName("oriapplydate")
  String oriApplyDate;
  @SerializedName("originalapplyserial")
  String originalApplySerial;
  @SerializedName("outsideorderno")
  String outsideOrderNo;
  @SerializedName("riskmatch")
  String riskMatch;
  @SerializedName("sharetype")
  String shareType;
  @SerializedName("tradeacco")
  String tradeAcco;
  @SerializedName("tradeconfirmshare")
  String tradeConfirmShare;
  @SerializedName("tradeconfirmsum")
  String tradeConfirmSum;
  @SerializedName("xyh")
  String xyh;


  public String getAccepTtime() {
    return accepTtime;
  }

  public void setAccepTtime(String accepTtime) {
    this.accepTtime = accepTtime;
  }

  public String getApplyDate() {
    return applyDate;
  }

  public void setApplyDate(String applyDate) {
    this.applyDate = applyDate;
  }

  public String getApplySerial() {
    return applySerial;
  }

  public void setApplySerial(String applySerial) {
    this.applySerial = applySerial;
  }

  public String getApplyShare() {
    return applyShare;
  }

  public void setApplyShare(String applyShare) {
    this.applyShare = applyShare;
  }

  public String getApplySum() {
    return applySum;
  }

  public void setApplySum(String applySum) {
    this.applySum = applySum;
  }

  public String getApplyTime() {
    return applyTime;
  }

  public void setApplyTime(String applyTime) {
    this.applyTime = applyTime;
  }

  public String getBankAcco() {
    return bankAcco;
  }

  public void setBankAcco(String bankAcco) {
    this.bankAcco = bankAcco;
  }

  public String getBankName() {
    return bankName;
  }

  public void setBankName(String bankName) {
    this.bankName = bankName;
  }

  public String getBankSerial() {
    return bankSerial;
  }

  public void setBankSerial(String bankSerial) {
    this.bankSerial = bankSerial;
  }

  public String getBusinFlagStr() {
    return businFlagStr;
  }

  public void setBusinFlagStr(String businFlagStr) {
    this.businFlagStr = businFlagStr;
  }

  public String getCallingCode() {
    return callingCode;
  }

  public void setCallingCode(String callingCode) {
    this.callingCode = callingCode;
  }

  public String getCapitalMode() {
    return capitalMode;
  }

  public void setCapitalMode(String capitalMode) {
    this.capitalMode = capitalMode;
  }

  public String getCommisionDiscount() {
    return commisionDiscount;
  }

  public void setCommisionDiscount(String commisionDiscount) {
    this.commisionDiscount = commisionDiscount;
  }

  public String getConfirmFlag() {
    return confirmFlag;
  }

  public void setConfirmFlag(String confirmFlag) {
    this.confirmFlag = confirmFlag;
  }

  public String getConfirmstat() {
    return confirmstat;
  }

  public void setConfirmstat(String confirmstat) {
    this.confirmstat = confirmstat;
  }

  public String getFreezeMethod() {
    return freezeMethod;
  }

  public void setFreezeMethod(String freezeMethod) {
    this.freezeMethod = freezeMethod;
  }

  public String getFundAcco() {
    return fundAcco;
  }

  public void setFundAcco(String fundAcco) {
    this.fundAcco = fundAcco;
  }

  public String getFundName() {
    return fundName;
  }

  public void setFundName(String fundName) {
    this.fundName = fundName;
  }

  public String getKkStat() {
    return kkStat;
  }

  public void setKkStat(String kkStat) {
    this.kkStat = kkStat;
  }

  public String getMelonMethod() {
    return melonMethod;
  }

  public void setMelonMethod(String melonMethod) {
    this.melonMethod = melonMethod;
  }

  public String getOccurBankAcco() {
    return occurBankAcco;
  }

  public void setOccurBankAcco(String occurBankAcco) {
    this.occurBankAcco = occurBankAcco;
  }

  public String getOriApplyDate() {
    return oriApplyDate;
  }

  public void setOriApplyDate(String oriApplyDate) {
    this.oriApplyDate = oriApplyDate;
  }

  public String getOriginalApplySerial() {
    return originalApplySerial;
  }

  public void setOriginalApplySerial(String originalApplySerial) {
    this.originalApplySerial = originalApplySerial;
  }

  public String getOutsideOrderNo() {
    return outsideOrderNo;
  }

  public void setOutsideOrderNo(String outsideOrderNo) {
    this.outsideOrderNo = outsideOrderNo;
  }

  public String getRiskMatch() {
    return riskMatch;
  }

  public void setRiskMatch(String riskMatch) {
    this.riskMatch = riskMatch;
  }

  public String getShareType() {
    return shareType;
  }

  public void setShareType(String shareType) {
    this.shareType = shareType;
  }

  public String getTradeAcco() {
    return tradeAcco;
  }

  public void setTradeAcco(String tradeAcco) {
    this.tradeAcco = tradeAcco;
  }

  public String getTradeConfirmShare() {
    return tradeConfirmShare;
  }

  public void setTradeConfirmShare(String tradeConfirmShare) {
    this.tradeConfirmShare = tradeConfirmShare;
  }

  public String getTradeConfirmSum() {
    return tradeConfirmSum;
  }

  public void setTradeConfirmSum(String tradeConfirmSum) {
    this.tradeConfirmSum = tradeConfirmSum;
  }

  public String getXyh() {
    return xyh;
  }

  public void setXyh(String xyh) {
    this.xyh = xyh;
  }
}
