package com.shellshellfish.aaas.common.grpc.zzapi;

import com.google.gson.annotations.SerializedName;

/**
 * Created by chenwei on 2018- 五月 - 16
 */

public class ZZWltAplyInfo {
  @SerializedName("tradeacco")
  String tradeAcco;
  @SerializedName("fundacco")
  String fundAcco;
  @SerializedName("fundname")
  String fundName;
  @SerializedName("callingcode")
  String callingCode;
  @SerializedName("applyserial")
  String applySerial;
  @SerializedName("sharetype")
  String shareType;
  @SerializedName("applydate")
  String applyDate;
  @SerializedName("applytime")
  String applyTime;
  @SerializedName("applyshare")
  String applyShare;
  @SerializedName("applysum")
  String applySum;
  @SerializedName("commisiondiscount")
  String commisionDiscount;
  @SerializedName("melonmethod")
  String melonMethod;
  @SerializedName("freezemethod")
  String freezeMethod;
  @SerializedName("originalapplyserial")
  String originalApplySerial;
  @SerializedName("confirmflag")
  String confirmFlag;
  @SerializedName("confirmstat")
  String confirmStat;
  @SerializedName("capitalmode")
  String capitalMode;
  @SerializedName("kkstat")
  String kkStat;
  @SerializedName("oriapplydate")
  String oriApplydate;
  @SerializedName("accepttime")
  String acceptTime;
  @SerializedName("riskmatch")
  String riskMatch;
  @SerializedName("bankacco")
  String bankAcco;
  @SerializedName("bankname")
  String bankName;
  @SerializedName("businflagStr")
  String businFlagStr;
  @SerializedName("occurbankacco")
  String occurBankAcco;
  @SerializedName("bankSerial")
  String bankSerial;
  @SerializedName("outsideorderno")
  String outsideOrderno;
  @SerializedName("tradeconfirmshare")
  String tradeConfirmShare;
  @SerializedName("tradeconfirmsum")
  String tradeConfirmSum;
  @SerializedName("xyh")
  String xyh;

  public String getTradeAcco() {
    return tradeAcco;
  }

  public void setTradeAcco(String tradeAcco) {
    this.tradeAcco = tradeAcco;
  }

  public String getFundAcco() {
    return fundAcco;
  }

  public void setFundAcco(String fundAcco) {
    this.fundAcco = fundAcco;
  }

  public String getFundName() {
    return fundName;
  }

  public void setFundName(String fundName) {
    this.fundName = fundName;
  }

  public String getCallingCode() {
    return callingCode;
  }

  public void setCallingCode(String callingCode) {
    this.callingCode = callingCode;
  }

  public String getApplySerial() {
    return applySerial;
  }

  public void setApplySerial(String applySerial) {
    this.applySerial = applySerial;
  }

  public String getShareType() {
    return shareType;
  }

  public void setShareType(String shareType) {
    this.shareType = shareType;
  }

  public String getApplyDate() {
    return applyDate;
  }

  public void setApplyDate(String applyDate) {
    this.applyDate = applyDate;
  }

  public String getApplyTime() {
    return applyTime;
  }

  public void setApplyTime(String applyTime) {
    this.applyTime = applyTime;
  }

  public String getApplyShare() {
    return applyShare;
  }

  public void setApplyShare(String applyShare) {
    this.applyShare = applyShare;
  }

  public String getApplySum() {
    return applySum;
  }

  public void setApplySum(String applySum) {
    this.applySum = applySum;
  }

  public String getCommisionDiscount() {
    return commisionDiscount;
  }

  public void setCommisionDiscount(String commisionDiscount) {
    this.commisionDiscount = commisionDiscount;
  }

  public String getMelonMethod() {
    return melonMethod;
  }

  public void setMelonMethod(String melonMethod) {
    this.melonMethod = melonMethod;
  }

  public String getFreezeMethod() {
    return freezeMethod;
  }

  public void setFreezeMethod(String freezeMethod) {
    this.freezeMethod = freezeMethod;
  }

  public String getOriginalApplySerial() {
    return originalApplySerial;
  }

  public void setOriginalApplySerial(String originalApplySerial) {
    this.originalApplySerial = originalApplySerial;
  }

  public String getConfirmFlag() {
    return confirmFlag;
  }

  public void setConfirmFlag(String confirmFlag) {
    this.confirmFlag = confirmFlag;
  }

  public String getConfirmStat() {
    return confirmStat;
  }

  public void setConfirmStat(String confirmStat) {
    this.confirmStat = confirmStat;
  }

  public String getCapitalMode() {
    return capitalMode;
  }

  public void setCapitalMode(String capitalMode) {
    this.capitalMode = capitalMode;
  }

  public String getKkStat() {
    return kkStat;
  }

  public void setKkStat(String kkStat) {
    this.kkStat = kkStat;
  }

  public String getOriApplydate() {
    return oriApplydate;
  }

  public void setOriApplydate(String oriApplydate) {
    this.oriApplydate = oriApplydate;
  }

  public String getAcceptTime() {
    return acceptTime;
  }

  public void setAcceptTime(String acceptTime) {
    this.acceptTime = acceptTime;
  }

  public String getRiskMatch() {
    return riskMatch;
  }

  public void setRiskMatch(String riskMatch) {
    this.riskMatch = riskMatch;
  }

  public String getBankAcco() {
    return bankAcco;
  }

  public void setBankAcco(String bankAcco) {
    this.bankAcco = bankAcco;
  }

  public String getBankName() {
    return bankName;
  }

  public void setBankName(String bankName) {
    this.bankName = bankName;
  }

  public String getBusinFlagStr() {
    return businFlagStr;
  }

  public void setBusinFlagStr(String businFlagStr) {
    this.businFlagStr = businFlagStr;
  }

  public String getOccurBankAcco() {
    return occurBankAcco;
  }

  public void setOccurBankAcco(String occurBankAcco) {
    this.occurBankAcco = occurBankAcco;
  }

  public String getBankSerial() {
    return bankSerial;
  }

  public void setBankSerial(String bankSerial) {
    this.bankSerial = bankSerial;
  }

  public String getOutsideOrderno() {
    return outsideOrderno;
  }

  public void setOutsideOrderno(String outsideOrderno) {
    this.outsideOrderno = outsideOrderno;
  }

  public String getTradeConfirmShare() {
    return tradeConfirmShare;
  }

  public void setTradeConfirmShare(String tradeConfirmShare) {
    this.tradeConfirmShare = tradeConfirmShare;
  }

  public String getTradeConfirmSum() {
    return tradeConfirmSum;
  }

  public void setTradeConfirmSum(String tradeConfirmSum) {
    this.tradeConfirmSum = tradeConfirmSum;
  }

  public String getXyh() {
    return xyh;
  }

  public void setXyh(String xyh) {
    this.xyh = xyh;
  }
}
